Start adding jacoco test coverage reports